Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109456

/home/qt/work/qt/qttools/src/qdoc/qmlvisitor.cpp:593: undefined reference to `QString qualifiedIdToString<QQmlJS::AST::Type*>(QQmlJS::AST::Type*)'

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P0: Blocker
    • 6.5.0, 6.6.0
    • 6.6.0 FF
    • Build tools: qdoc
    • None
    • 0c165c2a4 (dev), c7cb2e564 (6.5)

    Description

      agent:2022/12/16 02:49:17 build.go:399: /usr/lib64/gcc/x86_64-suse-linux/9/../../../../x86_64-suse-linux/bin/ld: src/qdoc/CMakeFiles/qdoc.dir/qmlvisitor.cpp.o: in function `QmlDocVisitor::visit(QQmlJS::AST::UiPublicMember*)':
      agent:2022/12/16 02:49:17 build.go:399: /home/qt/work/qt/qttools/src/qdoc/qmlvisitor.cpp:593: undefined reference to `QString qualifiedIdToString<QQmlJS::AST::Type*>(QQmlJS::AST::Type*)'
      agent:2022/12/16 02:49:17 build.go:399: collect2: error: ld returned 1 exit status
      

      Build log: https://testresults.qt.io/logs/qt/qttools/efbde7f41900bbe8193059f25c2cfec51bbd2d66/LinuxopenSUSE_15_4x86_64LinuxopenSUSE_15_4x86_64GCCqtci-linux-openSUSE-15.4-x86_64-50-83e418Sccache_UseConfigure_WarningsAreErrors/7744ec284237251df5bf35cccc076e27bdfc95dc/build_1680672437/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qttools/tasks/1680672345

      Tested changes (refs/builds/qtci/dev/1671158421):
      https://codereview.qt-project.org/c/qt/qttools/+/448525/1 Bump version to 6.6.0
      https://codereview.qt-project.org/c/qt/qttools/+/449160/2 Update dependencies on 'dev' in qt/qttools

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            docinfrastructure Documentation Infrastructure Team
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes