qdoc: Adapt to changes in QML AST

Signal arguments have proper types these days.

Fixes: QTBUG-109456
Change-Id: Ib545173f51723e652b574e19b2b6723fd00476ae
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>